@@ -1,3 +1,8 @@
+2012-05-10  Hartmut Henkel  <hartmut@luatex.org>
+	and Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* lua/lepdflib.cc: Adapt for poppler 0.19.4.
+
 2012-05-09  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* lua/luainit.w (lua_initialize): Use WEB2CVERSION.
